--- a/e1.html
+++ b/e1.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="e1.js"></script>
+    <!--<script src="e1.js"></script>
+    <script src="e2.js"></script>-->
+    <script src="e3.js"></script>
   </body>
 </html>
