--- a/e1.html
+++ b/e1.html
@@ -8,6 +8,6 @@
   <body>
     <!--<script src="e1.js"></script>
     <script src="e2.js"></script>-->
-    <script src="e3.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
